# dns-orchestrator

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
dns-orchestrator-provider/: Cargo.toml  rustfmt.toml
dns-orchestrator-provider/src/: error.rs  factory.rs  lib.rs  traits.rs  types.rs
dns-orchestrator-provider/src/providers/: aliyun.rs  cloudflare.rs  dnspod.rs  huaweicloud.rs  mod.rs
docs/release-notes/: v1.2.0.md
scripts/: sync-version.mjs
src/: App.tsx  main.tsx
src-actix-web/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: crypto.rs  error.rs  lib.rs  types.rs
src-tauri/src/commands/: account.rs  dns.rs  domain.rs  mod.rs  toolbox.rs
src-tauri/src/credentials/: android.rs  keychain.rs  mod.rs
src-tauri/src/providers/: aliyun.rs  cloudflare.rs  dnspod.rs  huaweicloud.rs  mod.rs
src-tauri/src/storage/: account_store.rs
src/components/account/: AccountForm.tsx  AccountList.tsx  ExportDialog.tsx  ImportDialog.tsx  ProviderIcon.tsx
src/components/accounts/: AccountsPage.tsx
src/components/dns/: DnsRecordCard.tsx  DnsRecordForm.tsx  DnsRecordRow.tsx  DnsRecordTable.tsx
src/components/domain/: DomainList.tsx
src/components/domains/: DomainSelectorPage.tsx
src/components/home/: HomePage.tsx
src/components/layout/: AppLayout.tsx  MainContent.tsx  Sidebar.tsx
src/components/navigation/: AccountTreeItem.tsx  DomainTreeItem.tsx  SidebarFooter.tsx
src/components/settings/: SettingsPage.tsx  SettingsSheet.tsx
src/components/toolbox/: DnsLookup.tsx  HistoryChips.tsx  IpLookup.tsx  QueryHistory.tsx  SslCheck.tsx  ToolboxPage.tsx  WhoisLookup.tsx
src/components/toolbox/hooks/: useToolboxQuery.ts
src/components/toolbox/shared/: QueryInput.tsx  ToolCard.tsx  index.ts
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  sheet.tsx  sonner.tsx  status-bar.tsx  update-dialog.tsx
src/hooks/: useMediaQuery.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/stores/: accountStore.ts  dnsStore.ts  domainStore.ts  index.ts  settingsStore.ts  toolboxStore.ts  updaterStore.ts
src/types/: account.ts  domain.ts  index.ts  toolbox.ts
