[package]
name = "dns-orchestrator-provider"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DNS provider abstraction library for multiple cloud platforms"
authors = ["AptS-1547 <apts-1547@esaps.net>"]

[features]
default = ["native-tls", "all-providers"]
# TLS 后端选择（二选一）
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
# 按需启用 providers
cloudflare = []
aliyun = []
dnspod = []
huaweicloud = []
all-providers = ["cloudflare", "aliyun", "dnspod", "huaweicloud"]

[dependencies]
# 核心依赖
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 客户端（不带默认 features，让 feature flag 控制 TLS）
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# 加密和签名
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# 时间和 UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# URL 编码
urlencoding = "2.1"

# 日志
log = "0.4"
