[package]
name = "dns-orchestrator"
version = "1.0.13"
description = "DNS Orchestrator built with Tauri"
license = "MIT"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release-debug]
inherits = "release"
codegen-units = 1
debug = true
strip = false
lto = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dns_orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
urlencoding = "2.1.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
dns-orchestrator-provider = { path = "../dns-orchestrator-provider", features = ["all-providers", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
keyring = { version = "3", features = [
    "apple-native",      # macOS/iOS
    "windows-native",    # Windows
    "sync-secret-service", "crypto-rust"  # Linux/FreeBSD/OpenBSD (DBus Secret Service)
] }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
hickory-resolver = "0.25"
whois-rust = { version = "1.6", features = ["tokio"] }
regex = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
pbkdf2 = { version = "0.12", features = ["simple"] }
# SSL 证书检查
native-tls = "0.2"
x509-parser = "0.16"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

# Android 特定依赖
[target."cfg(target_os = \"android\")".dependencies]
tauri-plugin-stronghold = "2"
tauri-plugin-apk-installer = { path = "./tauri-plugin-apk-installer" }
dns-orchestrator-provider = { path = "../dns-orchestrator-provider", features = ["all-providers", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
# 使用 rustls-tls 代替 native-tls，避免 OpenSSL 交叉编译问题
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
pbkdf2 = { version = "0.12", features = ["simple"] }
# DNS 和 WHOIS 查询
hickory-resolver = "0.25"
whois-rust = { version = "1.6", features = ["tokio"] }
# SSL 证书检查 (Android 使用 rustls)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
x509-parser = "0.16"

# Clippy 配置
[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "allow", priority = -1 }

# 放宽某些规则（Tauri 项目常见需求）
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"

# 严格规则
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
